# lepton_thermal

./: CMakeLists.txt  README.md  package.xml
msg/: Num.msg
src/: README.md  gui.cpp  gui.h  lepton-threads.cpp  lepton-threads.h  main.cpp  utils.h
src/videos/: flirVideo-00001.avi
